Date calculations failing in Safari on mobile devices - fixed.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,6 +9,30 @@ p {
     font-size: 1.2em;
 }
 
+.banner {
+    background-image: url(../img/2014-08-lincoln-ave.jpg);
+    width: 1000px;
+    height: 290px;
+    margin: auto;
+    margin-bottom: 12px;
+    padding-left: 10px;
+    padding-top: 4px;
+    font-size: 2.4em;
+}
+
+@media only screen and (max-device-width: 480px) {
+    .banner {
+        background-image: none;
+        width: 100%;
+        height: 70px;
+        margin: auto;
+        margin-bottom: 10px;
+        font-size: 2em;
+        text-align:center;
+        background-color: lightblue;
+    }
+}
+
 .trains-time {
     display: block;
     float: left;
@@ -21,7 +45,7 @@ p {
 
 .clear {
     clear: both;
-    width:12px;
+    width: 12px;
     height: 12px;
 }
 
@@ -40,25 +64,12 @@ h2 {
     font-size: 0.9em;
 }
 
-.banner {
-    background-image: url(../img/2014-08-lincoln-ave.jpg);
-    width: 1000px;
-    height: 293px;
-    margin: auto;
-    margin-bottom: 12px;
-    padding-left: 10px;
-    padding-top: 4px;
-    font-size: 2.4em;
-}
-
-
 .this-month-chart, .this-year-chart {
     width: 90%;
     height: 400px;
     margin: auto;
     max-width: 1000px;
 }
-
 
 footer {
     width: 90%;
